--- a/src/app/components/users/login/login.component.html
+++ b/src/app/components/users/login/login.component.html
@@ -1,1 +1,21 @@
-<mat-icon svgIcon="thumbs-up" aria-hidden="false" aria-label="Example thumbs up SVG icon"></mat-icon>
+<div class="mx-auto">
+    <div class="col text-center">
+        <label class="text-center">INICIAR SESIÓN CON</label>
+        <form>
+            <div class="form-group col text-center">
+                <label for="InputEmail">Email address</label>
+                <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp"
+                    placeholder="Enter email">
+            </div>
+            <div class="form-group col text-center">
+                <label for="InputPassword">Password</label>
+                <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary" (click)="loginEmail()">Login</button>
+        </form>
+        <div class="col-md-auto">
+            <button class="rounded-lg btn btn-danger fa fa-google" style="font-size:50px;"
+                (click)="loginGoogle()"></button>
+        </div>
+    </div>
+</div>
