Se guardan los productos y las bodegas en el LocalStorage.

--- a/src/app/components/bodegas/bodegas.component.html
+++ b/src/app/components/bodegas/bodegas.component.html
@@ -1,1 +1,19 @@
-<p>bodegas works!</p>
+<div class="card">
+        <div class="card-body">
+            <h3>Bodegas</h3>
+            <form >
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="Nombre" #newNombre>
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="Código" #newCodigo>
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="Ciudad" #newCiudad>
+                </div>
+                <button class="btn btn-primary"(click)="addBodega(newNombre, newCodigo, newCiudad)">
+                    Guardar
+                </button>
+            </form>
+        </div>
+    </div>
