--- a/src/app/components/users/inicio/inicio.component.html
+++ b/src/app/components/users/inicio/inicio.component.html
@@ -1,12 +1,15 @@
 
 <div class="container">
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-4">
                     <app-perfil></app-perfil>
             </div>
-            <div class="col-md-7">
+            <div class="col-md">
                 <app-bodegas></app-bodegas>
+            </div>
+            <div class="col-md-5">
                 <app-productos></app-productos>
             </div>
+            
         </div>
     </div>
